Criando a consulta de gatinhos
