# swagger_output.json
@@ -218,6 +218,21 @@
         }
       }
     },
+    "/gato/{status}": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/gatos/{id}": {
       "put": {
         "tags": [],
